--- a/app/src/main/res/layout/activity_single_item_analyze.xml
+++ b/app/src/main/res/layout/activity_single_item_analyze.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/card1_imageview_activity_main"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginStart="8dp"
@@ -44,13 +44,13 @@
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/card1_textview_activity_main"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="Marinara Sauce"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintStart_toEndOf="@+id/card1_imageview_activity_main"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -60,8 +60,8 @@
                     android:layout_marginStart="16dp"
                     android:text="600 kcal"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    app:layout_constraintStart_toEndOf="@+id/card1_imageview_activity_main"
+                    app:layout_constraintTop_toBottomOf="@+id/card1_textview_activity_main" />
 
                 <TextView
                     android:id="@+id/mass"
@@ -71,7 +71,7 @@
                     android:text="150 g"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/calories"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/card1_textview_activity_main" />
 
 
 
