Created java files for the xml files created

--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/button_scan_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scan Item"
