--- a/app/src/main/res/layout/activity_single_item_analyze.xml
+++ b/app/src/main/res/layout/activity_single_item_analyze.xml
@@ -45,7 +45,7 @@
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <TextView
-                    android:id="@+id/card1_textview_activity_main"
+                    android:id="@+id/itemName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -97,7 +97,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/fats"
+                    android:id="@+id/protein"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -105,12 +105,12 @@
                     android:lines="2"
                     android:text="Protein\n 100g"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/protein"
+                    app:layout_constraintEnd_toStartOf="@+id/fats"
                     app:layout_constraintStart_toEndOf="@+id/carbs"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/protein"
+                    android:id="@+id/fats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="32dp"
