--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
     <style name="Theme.Grocerease.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
 
     <style name="Theme.Grocerease.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
