--- a/app/src/main/res/layout/activity_database_add.xml
+++ b/app/src/main/res/layout/activity_database_add.xml
@@ -347,11 +347,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/foodIDTextView" />
     </LinearLayout>
+
     <Button
+        android:id="@+id/addToDatabaseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/foodIronLinearLayout"
-        android:id="@+id/addToDatabaseButton"
-        android:text="Add to Database"/>
+        android:text="Add to Database"
+        app:layout_constraintTop_toBottomOf="@+id/foodIronLinearLayout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
