--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -100,6 +100,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RadioGroup
+                        android:id="@+id/bloodPressureGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -165,6 +166,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RadioGroup
+                        android:id="@+id/bloodSugarLevelsGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -229,6 +231,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RadioGroup
+                        android:id="@+id/HighCholesterolGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -284,6 +287,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RadioGroup
+                        android:id="@+id/weightGoalsGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -349,6 +353,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <EditText
+                        android:id="@+id/UserObjectName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Please enter your name"
@@ -468,6 +473,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RadioGroup
+                        android:id="@+id/UserSex"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -538,6 +544,7 @@
             </androidx.cardview.widget.CardView>
 
             <Button
+                android:id="@+id/quizSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Submit Quiz"
