pushing broken boilerplate code

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,7 +20,7 @@ android:layout_height="wrap_content">
             android:layout_height="40dp"
             android:layout_margin="20dp"
             android:layout_gravity="center"
-            android:id="@+id/imgTvshow"/>
+            android:id="@+id/historyImage"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,8 +28,7 @@ android:layout_height="wrap_content">
             android:textSize="17sp"
             android:layout_margin="20dp"
             android:layout_gravity="center"
-            android:id="@+id/textTvshow"
-            android:text="Place_holder"/>
+            android:id="@+id/historyText" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
 
